仮　ごめんドア閉じん

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -10,27 +10,29 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <h1>雑学ランダム選択</h1>
-    <!-- フォーム -->
-    <form onsubmit="onSubmitForm(event)">
-        <button type="submit">ランダムに選択</button>
-    </form>
-    <div class="wrapper">
-        <!-- 雑学の表示 -->
-        <div id="output" class="container"></div>
-        <!--戻るボタン-->
-        <button onclick="goBack()">戻る</button>
-        <!--ドア-->
-        <div id="left-door" class="door">
-            <div class="shape"></div>
-            <div class="shape"></div>
-            <div id="left-knob" class="knob"></div>
+    <div id="box">
+        <h1>雑学ランダム選択</h1>
+        <div class="wrapper">
+            <!-- 雑学の表示 -->
+            <div id="output" class="container"></div>
+            <!--戻るボタン-->
+            <!--<button type="submit" onclick="fetchZatugaku(); closeDoors();">戻る</button>-->
+            <!--ドア-->
+            <div id="left-door" class="door">
+                <div class="shape"></div>
+                <div class="shape"></div>
+                <div id="left-knob" class="knob"></div>
+            </div>
+            <div id="right-door" class="door">
+                <div class="shape"></div>
+                <div class="shape"></div>
+                <div id="right-knob" class="knob"></div>
+            </div>
         </div>
-        <div id="right-door" class="door">
-            <div class="shape"></div>
-            <div class="shape"></div>
-            <div id="right-knob" class="knob"></div>
-        </div>
+        <!--フォーム-->
+        <form onsubmit="onSubmitForm(event)">
+            <button type="submit" onclick=" toggleDoors();">ランダムに選択</button>
+        </form>
     </div>
 </body>
 </html>
