画像埋め込みかつサイズ調整

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -11,8 +11,12 @@
         <div id="door-container">
             <button id="open-button">ドアを開く</button>
             <div id="doors">
-                <div id="left-door"></div>
-                <div id="right-door"></div>
+                <div id="left-door">
+                    <img src="../img/left.png" width="100px" height="300px">
+                </div>
+                <div id="right-door">
+                    <img src="../img/right.png" width="100px" height="290px">
+                </div>
             </div>
         </div>
         <script src="../js/randomFacts.js"></script>
