再度画像入れた

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -9,13 +9,15 @@
     </head>
     <body>
         <div id="door-container">
-            <button id="open-button">ドアを開く</button>
+            <form action="../html/back.html" method="post">
+                <button id="open-button" type="submit">ドアを開く</button>
+            </form>
             <div id="doors">
                 <div id="left-door">
-                    <img src="../img/left.png" width="100px" height="300px">
+                    <img src="../img/left.png" width="148px" height="330px">
                 </div>
                 <div id="right-door">
-                    <img src="../img/right.png" width="100px" height="290px">
+                    <img src="../img/right.png" width="148px" height="320px">
                 </div>
             </div>
         </div>
