背景合体作戦

--- a/src/html/back.html
+++ b/src/html/back.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="../css/back.css">            
     </head>
     <body>
-        <div id="back-img"></div>
+        <div id="back"></div>
     </body>
 </html>
