--- a/src/html/main.html
+++ b/src/html/main.html
@@ -9,15 +9,15 @@
     </head>
     <body>
         <div id="door-container">
-            <form action="../html/back.html" method="post">
+            <!--<form action="../html/back.html" method="post">-->
                 <button id="open-button" type="submit">ドアを開く</button>
-            </form>
+            <!--</form>-->
             <div id="doors">
                 <div id="left-door">
-                    <img src="../img/left.png" width="148px" height="330px">
+                    <img src="../img/left.png" width="180px" height="400px">
                 </div>
                 <div id="right-door">
-                    <img src="../img/right.png" width="148px" height="320px">
+                    <img src="../img/right.png" width="180px" height="386.5px">
                 </div>
             </div>
         </div>
